Fix z-index stacking bug that prevented overlay from being rendered within chrome by providing a position property :rocket::boom:

--- a/src/components/assets/css/Home.css
+++ b/src/components/assets/css/Home.css
@@ -6,12 +6,14 @@
 }
 
 .bg{
+    position: relative;
     height: 100vh;
     z-index: -1;
     background: url('https://images.pexels.com/photos/574071/pexels-photo-574071.jpeg?auto=compress&cs=tinysrgb&h=650&w=940');
     background-size: cover;   
     background-repeat: no-repeat;
     filter: blur(.2px);
+    -webkit-filter: blur(.2px);
 }   
 
 .image-wrapper{
